tests/fixtures/should_fail/package_after_def.bop
edition = "2026"

struct Foo {
    x: int32;
}

// Error: package must come before definitions
package my.package;
